# poc-builder

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
design_systems/: default.json
examples/: contact-form.txt  leave-planner.txt  todo-app.txt
src/: __init__.py  cli.py
src/design_system/: __init__.py  loader.py  models.py
src/feedback/: __init__.py
src/generator/: __init__.py  component_generator.py  parser.py  scaffold.py
src/llm/: claude.py
src/validator/: __init__.py
templates/vite-react/: package.json.j2
templates/vite-react/src/: App.css  App.css.j2  App.tsx.j2  index.css.j2
templates/vite-react/src/components/: Header.css.j2  Header.tsx.j2
